--- a/src/main/resources/templates/waiting-room.html
+++ b/src/main/resources/templates/waiting-room.html
@@ -3,7 +3,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>접속자대기열시스템</title>
+    <title>수강신청 순번대기 시스템</title>
     <style>
         body {
             font-family: Arial, sans-serif;
